--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,8 @@ import fostyNaturalImg from "../assets/works/fosty-natural.webp";
 import fostyDarkImg from "../assets/works/fosty-dark.webp";
 import eightPxImg from "../assets/works/8pxapp.webp";
 import iromideImg from "../assets/works/iromide.webp";
+import npmImg from "../../assets/npm.svg";
+import pypiImg from "../../assets/pypi.svg";
 
 interface Project {
   id: string;
@@ -38,15 +40,15 @@ const site = {
 
 const categories = {
   web: "Web",
-  // software: "Software",
+  software: "Software",
   keyboard: "Keyboard",
 } as const;
 
 const profile = {
   name: "unlibra",
   username: "unlibra",
-  bio: `このサイトはXオマージュのポートフォリオです
-これまでの制作実績をまとめています`,
+  bio: `Xオマージュのポートフォリオサイトです
+これまでの開発・制作物をまとめています`,
   location: "Tokyo, Japan",
   website: "https://github.com/unlibra",
   sponsor: "https://ofuse.me/unlibra",
@@ -61,6 +63,15 @@ const updatedAt = buildDate.toLocaleDateString("en-US", {
 const allWorks: Project[] = [
   {
     id: "1",
+    title: "tkinter-unblur",
+    description: `Windowsの高DPI環境でPythonのTkinterがぼやけてしまう問題を修正したライブラリを作りました。`,
+    category: "software",
+    year: "2020",
+    image: pypiImg,
+    link: 'https://pypi.org/project/tkinter-unblur'
+  },
+  {
+    id: "2",
     title: "mira zero",
     description: `40%分割カラムスタッガード配列ロープロ(ChocV1)キーボード。終売。
 初めて作った自作キーボード。`,
@@ -69,7 +80,7 @@ const allWorks: Project[] = [
     image: miraImg,
   },
   {
-    id: "2",
+    id: "3",
     title: "fosty natural",
     description: `HHKBインスパイア配列40%ロープロファイル(ChocV2)キーボード。アルミカラーモデル。非売品。
 6作目ぐらい。エンドゲーム。`,
@@ -78,7 +89,7 @@ const allWorks: Project[] = [
     image: fostyNaturalImg,
   },
   {
-    id: "3",
+    id: "4",
     title: "fosty dark",
     description: `HHKBインスパイア配列40%ロープロファイル(ChocV2)キーボード。ブラックモデル。非売品。
 黒もほしくなったので作った。`,
@@ -87,7 +98,7 @@ const allWorks: Project[] = [
     image: fostyDarkImg,
   },
   {
-    id: "4",
+    id: "5",
     title: "8px.app",
     description: `Favicon生成、カラーパレット作成、SVG最適化など、Web・アプリ開発者のためのツールセット。
 Tailwindに馴染むカラーパレットを作りたいという想いから始まり、ついでに自分が使うWEBサービスの機能を集約した。`,
@@ -97,7 +108,7 @@ Tailwindに馴染むカラーパレットを作りたいという想いから始
     link: "https://8px.app",
   },
   {
-    id: "5",
+    id: "6",
     title: "推し色生成 イロマイド",
     description: `画像からカラーパレットを生成してチェキを作るサービス。
 8px.app内のサービスとして公開。
@@ -106,6 +117,15 @@ Tailwindに馴染むカラーパレットを作りたいという想いから始
     year: "2025",
     image: iromideImg,
     link: "https://8px.app/iromide",
+  },
+    {
+    id: "7",
+    title: "next-i18n-tiny",
+    description: `最もシンプルなi18nライブラリを作りました。Next.js AppRouter向けの型安全で依存性のないi18nライブラリ。`,
+    category: "software",
+    year: "2025",
+    image: npmImg,
+    link: 'https://www.npmjs.com/package/next-i18n-tiny'
   },
 ];
 ---
@@ -304,8 +324,7 @@ Tailwindに馴染むカラーパレットを作りたいという想いから始
                           class="hashtag-btn text-accent-secondary cursor-pointer hover:underline"
                           data-category={work.category}
                         >
-                          #
-                          {categories[
+                          #{categories[
                             work.category as keyof typeof categories
                           ] || work.category}
                         </button>
